Add models and test fly

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(openGL_3dEngine)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(openGL_3dEngine openGL_3dEngine.cpp Callbacks.cpp Callbacks.hpp src/Camera.h src/InitMethods.h src/Window.h src/Collisions.h src/Interaction.h include/model3DS.h include/model3DS.cpp include/textureBMP.cpp include/textureBMP.h include/textureTGA.cpp include/textureTGA.h)
+add_executable(openGL_3dEngine openGL_3dEngine.cpp Callbacks.cpp Callbacks.hpp src/Camera.h src/InitMethods.h src/Window.h src/Collisions.h src/Interaction.h include/model3DS.h include/model3DS.cpp include/textureBMP.cpp include/textureBMP.h include/textureTGA.cpp include/textureTGA.h model/Airplane.cpp model/Airplane.h model/Vector.cpp model/Vector.h)
 target_link_libraries(openGL_3dEngine -lOpenGL32 -lfreeGLUT -lglu32)
